# seqchromloader

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
data/: sample.bam  sample.bam.bai  sample.bed  sample.bw  sample.fa
docs/source/: conf.py  index.rst  install.rst  usage.rst
seqchromloader/: __init__.py  config.py  loader.py  utils.py  writer.py
tests/: test_backend_memmap.py  test_backend_pybigwig.py  test_writer_loader.py  unittest.py
