[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seqchromloader"
version = "0.11.4"
description = "Utilities for training DL models using DNA sequence and chromatin inputs"
authors = [{name = "Jianyu Yang", email = "yztxwd@gmail.com"},]
readme = "README.md"
requires-python = ">=3.8, <3.14"
dependencies = [
    'biopython>=1.8.0',
    'numpy',
    'pandas',
    'pyfaidx>=0.7.0',
    'pybedtools>=0.9.0',
    'pysam>=0.19.0',
    'pybigwig>=0.3.0',
    'torch>=1.10.0',
    'webdataset>=0.2.0',
    'pybigtools>=0.2.5, <0.3'
]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
keywords = ["interpretation",  "attribution", "concept", "genomics", "deep learning"]

[project.urls]
Homepage = "https://github.com/seqcode/seqchromloader"

[tool.setuptools.packages.find]
exclude = ["data", "test", "build", "dist"]
